[package]
name = "axelar-gmp"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk =  {version = '22.0.0-rc.3', features = ["alloc"]}
axelar-gateway = { git = "https://github.com/axelarnetwork/axelar-cgp-soroban", subdir = "contracts/axelar-gateway", features = [
    'library',
] }
axelar-gas-service = { git = "https://github.com/axelarnetwork/axelar-cgp-soroban", subdir = "contracts/axelar-gas-service", features = [
    'library',
] }
axelar-soroban-std = { git = "https://github.com/axelarnetwork/axelar-cgp-soroban", subdir = "packages/axelar-soroban-std" }
alloy-primitives = "0.8.19"
alloy-sol-types = "=0.7.6"


[dev-dependencies]
soroban-sdk = { version = '22.0.0-rc.3', features = ["testutils"] }


[profile.release-with-logs]
inherits = "release"
debug-assertions = true

