[package]
name = "axelar-gmp"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk =  {version = '22.0.0-rc.3', features = ["alloc"]}
stellar-axelar-gateway = { git = "https://github.com/axelarnetwork/axelar-amplifier-stellar", subdir = "contracts/stellar-axelar-gateway", features = [
    'library',
] }
stellar-axelar-gas-service = { git = "https://github.com/axelarnetwork/axelar-amplifier-stellar", subdir = "contracts/stellar-axelar-gas-service", features = [
    'library',
] }
stellar-axelar-std = { git = "https://github.com/axelarnetwork/axelar-amplifier-stellar", subdir = "packages/stellar-axelar-std" }
alloy-sol-types = "=0.7.6"


[dev-dependencies]
soroban-sdk = { version = '22.0.0-rc.3', features = ["testutils"] }


[profile.release-with-logs]
inherits = "release"
debug-assertions = true

